--- a/package.json
+++ b/package.json
@@ -8,19 +8,17 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run typescript && npm run typescript:jest && npm run typescript:default && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
-    "typescript": "tap plugin add @tapjs/typescript && tsd",
+    "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
+    "typescript": "tsd",
     "typescript:jest": "jest",
-    "typescript:default": "node scripts/unit-typescript.js",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
-    "typescript:swc": "node scripts/unit-typescript-swc.js",
     "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
     "typescript:tsx": "node scripts/unit-typescript-tsx.js",
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
-    "unit": "tap plugin rm @tapjs/typescript && node scripts/unit.js",
+    "unit": "node scripts/unit.js",
     "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
   },
   "repository": {
@@ -47,12 +45,13 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
     "@fastify/url-data": "^5.4.0",
-    "@swc-node/register": "^1.9.0",
+    "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.4.13",
-    "@swc/register": "^0.1.9",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/tap": "^15.0.11",
+    "esbuild": "^0.20.2",
+    "esbuild-register": "^3.5.0",
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
     "jest": "^29.7.0",
@@ -66,12 +65,9 @@
     "tsm": "^2.3.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5",
-    "esbuild": "^0.20.2",
-    "esbuild-register": "^3.5.0",
     "vite": "^5.2.8",
     "vitest": "^1.5.0"
   },
-  "dependencies": {},
   "standard": {
     "ignore": [
       "test/*/*-error/lib/a.js"
