--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
     "unit": "node scripts/unit.js",
-    "unit:with-modules": " tap plugin rm @tapjs/typescript && tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
+    "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
   },
   "repository": {
     "type": "git",
@@ -46,27 +46,27 @@
     "@fastify/pre-commit": "^2.1.0",
     "@fastify/url-data": "^5.4.0",
     "@swc-node/register": "^1.9.1",
-    "@swc/core": "^1.4.13",
+    "@swc/core": "^1.5.25",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.2",
     "@types/tap": "^15.0.11",
-    "esbuild": "^0.20.2",
+    "esbuild": "^0.21.4",
     "esbuild-register": "^3.5.0",
-    "fastify": "^4.26.2",
+    "fastify": "^4.27.0",
     "fastify-plugin": "^4.5.1",
     "jest": "^29.7.0",
     "snazzy": "^9.0.0",
     "standard": "^17.1.0",
-    "tap": "^18.7.2",
-    "ts-jest": "^29.1.2",
+    "tap": "^19.0.2",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsd": "^0.31.0",
     "tsm": "^2.3.0",
-    "tsx": "^4.7.2",
+    "tsx": "^4.11.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.8",
-    "vitest": "^1.5.0"
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
   },
   "standard": {
     "ignore": [
