--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "scripts": {
     "lint": "standard | snazzy",
     "lint:fix": "standard --fix | snazzy",
-    "test": "npm run unit && npm run typescript && npm run typescript:jest && npm run typescript:esm && npm run typescript:swc && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild",
+    "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
     "typescript": "tsd",
     "typescript:jest": "jest",
     "typescript:esm": "node scripts/unit-typescript-esm.js",
-    "typescript:swc": "node scripts/unit-typescript-swc.js",
     "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
     "typescript:tsx": "node scripts/unit-typescript-tsx.js",
@@ -20,7 +19,7 @@
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
     "unit": "node scripts/unit.js",
-    "unit:with-modules": "tap test/issues/*/test.js test/commonjs/*.js test/module/*.js test/typescript/*.ts"
+    "unit:with-modules": "tap plugin rm @tapjs/typescript && tap plugin list && tap build && tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
   },
   "repository": {
     "type": "git",
@@ -43,33 +42,31 @@
     "url": "https://github.com/fastify/fastify-autoload/issues"
   },
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@fastify/pre-commit": "^2.0.2",
-    "@fastify/url-data": "^5.0.0",
-    "@swc-node/register": "^1.5.1",
-    "@swc/core": "^1.2.129",
-    "@swc/register": "^0.1.9",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.1.0",
-    "@types/tap": "^15.0.5",
-    "esbuild": "^0.21.5",
-    "esbuild-register": "^3.4.1",
-    "fastify": "^4.0.0-rc.2",
-    "fastify-plugin": "^4.0.0",
-    "jest": "^28.1.3",
+    "@fastify/pre-commit": "^2.1.0",
+    "@fastify/url-data": "^5.4.0",
+    "@swc-node/register": "^1.9.1",
+    "@swc/core": "^1.5.25",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/tap": "^15.0.11",
+    "esbuild": "^0.21.4",
+    "esbuild-register": "^3.5.0",
+    "fastify": "^4.27.0",
+    "fastify-plugin": "^4.5.1",
+    "jest": "^29.7.0",
     "snazzy": "^9.0.0",
-    "standard": "^17.0.0",
-    "tap": "^16.0.0",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.4.0",
+    "standard": "^17.1.0",
+    "tap": "^19.0.2",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsd": "^0.31.1",
-    "tsm": "^2.2.1",
+    "tsm": "^2.3.0",
     "tsx": "^4.15.7",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
   },
   "standard": {
     "ignore": [
