--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "homepage": "https://github.com/fastify/fastify-autoload#readme",
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
-    "@fastify/url-data": "^5.4.0",
+    "@fastify/url-data": "^6.0.0-pre.fv5.1",
     "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.5.25",
     "@types/jest": "^29.5.12",
@@ -52,8 +52,8 @@
     "@types/tap": "^15.0.11",
     "esbuild": "^0.21.4",
     "esbuild-register": "^3.5.0",
-    "fastify": "^4.27.0",
-    "fastify-plugin": "^4.5.1",
+    "fastify": "^5.0.0-alpha.3",
+    "fastify-plugin": "^5.0.0-pre.fv5.1",
     "jest": "^29.7.0",
     "snazzy": "^9.0.0",
     "standard": "^17.1.0",
