--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript:swc-node-register": "node scripts/unit-typescript-swc-node-register.js",
     "typescript:tsm": "node scripts/unit-typescript-tsm.js",
     "typescript:tsx": "node scripts/unit-typescript-tsx.js",
+    "typescript:tsimp": "node scripts/unit-typescript-tsimp.js",
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
@@ -62,9 +63,10 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsd": "^0.31.1",
+    "tsimp": "^2.0.11",
     "tsm": "^2.3.0",
     "tsx": "^4.15.7",
-    "typescript": "^5.4.5",
+    "typescript": "5.5",
     "vite": "^5.2.12",
     "vitest": "^2.0.3"
   },
