--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/tap": "^15.0.11",
     "esbuild": "^0.23.0",
     "esbuild-register": "^3.5.0",
-    "fastify": "^5.0.0-alpha.4",
+    "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
     "jest": "^29.7.0",
     "snazzy": "^9.0.0",
