--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "commonjs",
   "types": "types/index.d.ts",
   "scripts": {
-    "lint": "standard | snazzy",
-    "lint:fix": "standard --fix | snazzy",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test": "npm run typescript && npm run typescript:jest && npm run typescript:swc-node-register && npm run typescript:tsm && npm run typescript:tsx && npm run typescript:vitest && npm run typescript:esbuild && npm run unit",
     "typescript": "tsd",
     "typescript:jest": "jest",
@@ -56,8 +56,7 @@
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
     "jest": "^29.7.0",
-    "snazzy": "^9.0.0",
-    "standard": "^17.1.0",
+    "neostandard": "^0.11.9",
     "tap": "^19.0.2",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
@@ -69,11 +68,6 @@
     "typescript": "5.5",
     "vite": "^5.2.12",
     "vitest": "^2.0.3"
-  },
-  "standard": {
-    "ignore": [
-      "test/*/*-error/lib/a.js"
-    ]
   },
   "jest": {
     "preset": "ts-jest",
