--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
-    "unit": "node scripts/unit.js",
-    "unit:with-modules": "node --test test/issues/*/test.js test/commonjs/*.js test/module/*.js"
+    "unit": "node scripts/unit.js"
   },
   "repository": {
     "type": "git",
@@ -84,6 +83,7 @@
     "eslint": "^9.17.0",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
+    "glob": "^11.0.1",
     "jest": "^29.7.0",
     "neostandard": "^0.12.0",
     "ts-jest": "^29.1.4",
