--- a/package.json
+++ b/package.json
@@ -81,9 +81,9 @@
     "esbuild": "^0.24.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^9.17.0",
+    "fast-glob": "^3.3.3",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
-    "glob": "^11.0.1",
     "jest": "^29.7.0",
     "neostandard": "^0.12.0",
     "ts-jest": "^29.1.4",
