--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript:esbuild": "node scripts/unit-typescript-esbuild.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
-    "unit": "node scripts/unit.js"
+    "unit": "borp --reporter=@jsumners/line-reporter"
   },
   "repository": {
     "type": "git",
@@ -74,14 +74,15 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
     "@fastify/url-data": "^6.0.0",
+    "@jsumners/line-reporter": "^1.0.1",
     "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.5.25",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
+    "borp": "^0.19.0",
     "esbuild": "^0.24.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^9.17.0",
-    "fast-glob": "^3.3.3",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
     "jest": "^29.7.0",
