--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "typescript:native": "node scripts/unit-typescript-native-type-stripping.js",
     "typescript:vitest": "vitest run",
     "typescript:vitest:dev": "vitest",
-    "unit": "node scripts/unit.js",
-    "unit:with-modules": "tap plugin rm @tapjs/typescript && tap plugin list && tap build && tap test/issues/*/test.js test/commonjs/*.js test/module/*.js"
+    "unit": "borp -C --check-coverage --lines 100 --reporter=@jsumners/line-reporter"
   },
   "repository": {
     "type": "git",
@@ -76,11 +75,12 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
     "@fastify/url-data": "^6.0.0",
+    "@jsumners/line-reporter": "^1.0.1",
     "@swc-node/register": "^1.9.1",
     "@swc/core": "^1.5.25",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.0",
-    "@types/tap": "^18.0.0",
+    "borp": "^0.19.0",
     "esbuild": "^0.24.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^9.17.0",
@@ -88,7 +88,6 @@
     "fastify-plugin": "^5.0.0",
     "jest": "^29.7.0",
     "neostandard": "^0.12.0",
-    "tap": "^19.0.2",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
