--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
         run: deno run typescript:deno
   
   test:
+    needs: [bun, deno]
     permissions:
       contents: write
       pull-requests: write
