--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "type": "commonjs",
   "types": "types/index.d.ts",
+  "resolutions": {
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.13.21"
+  },
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -77,8 +81,8 @@
   "devDependencies": {
     "@fastify/url-data": "^6.0.0",
     "@jsumners/line-reporter": "^1.0.1",
-    "@swc-node/register": "^1.9.1",
-    "@swc/core": "^1.5.25",
+    "@swc-node/register": "^1.11.1",
+    "@swc/core": "1.13.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.8",
     "borp": "^0.20.0",
