--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ permissions:
 jobs:
   bun:
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v5
         with:
@@ -41,6 +42,7 @@ jobs:
 
   deno:
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v5
         with:
@@ -56,7 +58,6 @@ jobs:
         run: deno run typescript:deno
   
   test:
-    needs: [bun, deno]
     permissions:
       contents: write
       pull-requests: write
