--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "tsimp": "^2.0.11",
     "tsm": "^2.3.0",
     "tsx": "^4.15.7",
-    "typescript": "5.5",
+    "typescript": "~5.9.3",
     "vite": "^7.0.0",
     "vitest": "^4.0.6"
   },
@@ -108,7 +108,14 @@
       "**/*.test.ts"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
+      "^.+\\.(ts|tsx)$": [
+        "ts-jest",
+        {
+          "tsconfig": {
+            "esModuleInterop": true
+          }
+        }
+      ]
     }
   },
   "publishConfig": {
